@@ -29,7 +29,7 @@ import shop.bluebooktle.common.exception.book.BookPublisherAlreadyExistsExceptio
 import shop.bluebooktle.common.exception.book.PublisherNotFoundException;
 
 @ExtendWith(MockitoExtension.class)
-public class BookPublisherServiceTest {
+class BookPublisherServiceTest {
 
 	@Mock
 	private PublisherRepository publisherRepository;
@@ -43,13 +43,9 @@ public class BookPublisherServiceTest {
 	@InjectMocks
 	private BookPublisherServiceImpl bookPublisherService;
 
-	private final Long BOOK_ID = 1L;
-	private final Long PUBLISHER_ID1 = 10L;
-	private final Long PUBLISHER_ID2 = 20L;
-
 	private Book sampleBook() {
 		return Book.builder()
-			.id(BOOK_ID)
+			.id(1L)
 			.title("멀쩡한 어른 되긴 글렀군")
 			.description("내 일상에 브레이크를 거는 짱구의 삐딱한 인생 기술")
 			.index("")
@@ -61,7 +57,7 @@ public class BookPublisherServiceTest {
 	private Publisher samplePublisher(Long id) {
 		return Publisher.builder()
 			.id(id)
-			.name("Pubblisher" + id)
+			.name("Publisher" + id)
 			.build();
 	}
 
@@ -69,14 +65,16 @@ public class BookPublisherServiceTest {
 	@DisplayName("단일 출판사 등록 - 성공")
 	void registerBookPublisher_success() {
 		Book book = sampleBook();
-		Publisher publisher = samplePublisher(PUBLISHER_ID1);
-		when(bookRepository.findById(BOOK_ID)).thenReturn(Optional.of(book));
-		when(publisherRepository.findById(PUBLISHER_ID1)).thenReturn(Optional.of(publisher));
+		Publisher publisher = samplePublisher(10L);
+		Long bookId = book.getId();
+		Long publisherId = publisher.getId();
+		when(bookRepository.findById(bookId)).thenReturn(Optional.of(book));
+		when(publisherRepository.findById(10L)).thenReturn(Optional.of(publisher));
 		when(bookPublisherRepository.existsByBookAndPublisher(book, publisher)).thenReturn(false);
 
-		PublisherInfoResponse response = bookPublisherService.registerBookPublisher(BOOK_ID, PUBLISHER_ID1);
+		PublisherInfoResponse response = bookPublisherService.registerBookPublisher(bookId, publisherId);
 
-		assertEquals(PUBLISHER_ID1, response.getId());
+		assertEquals(publisherId, response.getId());
 		verify(bookPublisherRepository, times(1)).save(any(BookPublisher.class));
 	}
 
@@ -84,38 +82,46 @@ public class BookPublisherServiceTest {
 	@DisplayName("출판사 등록 - 등록 실패: 이미 등록된 출판사")
 	void registerBookPublisher_fail_alreadyExists() {
 		Book book = sampleBook();
-		Publisher publisher = samplePublisher(PUBLISHER_ID1);
-		when(bookRepository.findById(BOOK_ID)).thenReturn(Optional.of(book));
-		when(publisherRepository.findById(PUBLISHER_ID1)).thenReturn(Optional.of(publisher));
+		Publisher publisher = samplePublisher(10L);
+		Long bookId = book.getId();
+		Long publisherId = publisher.getId();
+		when(bookRepository.findById(bookId)).thenReturn(Optional.of(book));
+		when(publisherRepository.findById(publisherId)).thenReturn(Optional.of(publisher));
 		when(bookPublisherRepository.existsByBookAndPublisher(book, publisher)).thenReturn(true);
 
 		assertThrows(BookPublisherAlreadyExistsException.class,
-			() -> bookPublisherService.registerBookPublisher(BOOK_ID, PUBLISHER_ID1));
+			() -> bookPublisherService.registerBookPublisher(bookId, publisherId));
 	}
 
 	@Test
 	@DisplayName("출판사 등록 - 등록 실패: 도서 없음")
 	void registerBookPublisher_fail_bookNotFound() {
-		when(bookRepository.findById(BOOK_ID)).thenReturn(Optional.empty());
-
+		Long bookId = 1L;
+		Long publisherId = 10L;
+		when(bookRepository.findById(bookId)).thenReturn(Optional.empty());
 		assertThrows(BookNotFoundException.class,
-			() -> bookPublisherService.registerBookPublisher(BOOK_ID, PUBLISHER_ID1));
+			() -> bookPublisherService.registerBookPublisher(bookId, publisherId));
 	}
 
 	@Test
 	@DisplayName("복수 출판사 등록 - 성공")
 	void registerBookPublishers_success() {
 		Book book = sampleBook();
-		Publisher publisher1 = samplePublisher(PUBLISHER_ID1);
-		Publisher publisher2 = samplePublisher(PUBLISHER_ID2);
-		when(bookRepository.findById(BOOK_ID)).thenReturn(Optional.of(book));
-		when(publisherRepository.findById(PUBLISHER_ID1)).thenReturn(Optional.of(publisher1));
-		when(publisherRepository.findById(PUBLISHER_ID2)).thenReturn(Optional.of(publisher2));
+
+
+		Publisher publisher1 = samplePublisher(10L);
+		Publisher publisher2 = samplePublisher(20L);
+		Long bookId = book.getId();
+		Long publisherId1 = publisher1.getId();
+		Long publisherId2 = publisher2.getId();
+		when(bookRepository.findById(bookId)).thenReturn(Optional.of(book));
+		when(publisherRepository.findById(publisherId1)).thenReturn(Optional.of(publisher1));
+		when(publisherRepository.findById(publisherId2)).thenReturn(Optional.of(publisher2));
 		when(bookPublisherRepository.existsByBookAndPublisher(book, publisher1)).thenReturn(false);
 		when(bookPublisherRepository.existsByBookAndPublisher(book, publisher2)).thenReturn(false);
 
-		List<PublisherInfoResponse> responses = bookPublisherService.registerBookPublisher(BOOK_ID,
-			Arrays.asList(PUBLISHER_ID1, PUBLISHER_ID2));
+		List<PublisherInfoResponse> responses = bookPublisherService.registerBookPublisher(bookId,
+			Arrays.asList(publisherId1, publisherId2));
 
 		assertEquals(2, responses.size());
 		verify(bookPublisherRepository, times(2)).save(any(BookPublisher.class));
@@ -127,50 +133,64 @@ public class BookPublisherServiceTest {
 		Book book = sampleBook();
 		BookPublisher existing = BookPublisher.builder()
 			.book(book)
-			.publisher(samplePublisher(PUBLISHER_ID1))
+			.publisher(samplePublisher(10L))
 			.build();
-
-		when(bookPublisherRepository.findByBookId(BOOK_ID))
+		Long bookId = book.getId();
+		when(bookPublisherRepository.findByBookId(bookId))
 			.thenReturn(Collections.singletonList(existing));
-		when(bookRepository.findById(BOOK_ID)).thenReturn(Optional.of(book));
-		Publisher pub2 = samplePublisher(PUBLISHER_ID2);
-		when(publisherRepository.findById(PUBLISHER_ID2)).thenReturn(Optional.of(pub2));
+		when(bookRepository.findById(bookId)).thenReturn(Optional.of(book));
+		Publisher pub2 = samplePublisher(20L);
+		Long pub2Id = pub2.getId();
+		when(publisherRepository.findById(20L)).thenReturn(Optional.of(pub2));
 		when(bookPublisherRepository.existsByBookAndPublisher(book, pub2)).thenReturn(false);
 
 		List<PublisherInfoResponse> updated = bookPublisherService.updateBookPublisher(
-			BOOK_ID, Collections.singletonList(PUBLISHER_ID2));
+			bookId, Collections.singletonList(20L));
 
 		verify(bookPublisherRepository, times(1))
 			.deleteAll(Collections.singletonList(existing));
 		verify(bookPublisherRepository, times(1))
 			.save(any(BookPublisher.class));
 		assertEquals(1, updated.size());
-		assertEquals(PUBLISHER_ID2, updated.get(0).getId());
+		assertEquals(pub2Id, updated.getFirst().getId());
 	}
 
 	@Test
 	@DisplayName("출판사 수정 - 실패: 도서 없음")
-	void updateBookPublisher_Fail_BookNotFound() {
-		when(bookPublisherRepository.findByBookId(BOOK_ID))
-			.thenReturn(Collections.emptyList());
-		when(bookRepository.findById(BOOK_ID)).thenReturn(Optional.empty());
+	void updateBookPublisher_fail_bookNotFound() {
+		long bookId      = 1L;
+		long publisherId = 10L;
 
-		assertThrows(BookNotFoundException.class,
-			() -> bookPublisherService.updateBookPublisher(
-				BOOK_ID, Collections.singletonList(PUBLISHER_ID1)));
+		when(bookPublisherRepository.findByBookId(bookId))
+			.thenReturn(Collections.emptyList());
+		when(bookRepository.findById(bookId))
+			.thenReturn(Optional.empty());
+
+		List<Long> publisherIds = Collections.singletonList(publisherId);
+
+		assertThrows(BookNotFoundException.class, () ->
+			bookPublisherService.updateBookPublisher(bookId, publisherIds)
+		);
 	}
 
 	@Test
 	@DisplayName("출판사 수정 - 실패: 출판사 없음")
-	void updateBookPublisher_Fail_PublisherNotFound() {
+	void updateBookPublisher_fail_publisherNotFound() {
 		Book book = sampleBook();
-		when(bookPublisherRepository.findByBookId(BOOK_ID))
-			.thenReturn(Collections.emptyList());
-		when(bookRepository.findById(BOOK_ID)).thenReturn(Optional.of(book));
-		when(publisherRepository.findById(PUBLISHER_ID1)).thenReturn(Optional.empty());
+		long bookId      = book.getId();
+		long publisherId = 10L;
 
-		assertThrows(PublisherNotFoundException.class,
-			() -> bookPublisherService.updateBookPublisher(
-				BOOK_ID, Collections.singletonList(PUBLISHER_ID1)));
+		when(bookPublisherRepository.findByBookId(bookId))
+			.thenReturn(Collections.emptyList());
+		when(bookRepository.findById(bookId))
+			.thenReturn(Optional.of(book));
+		when(publisherRepository.findById(publisherId))
+			.thenReturn(Optional.empty());
+
+		List<Long> publisherIds = Collections.singletonList(publisherId);
+
+		assertThrows(PublisherNotFoundException.class, () ->
+			bookPublisherService.updateBookPublisher(bookId, publisherIds)
+		);
 	}
 }
